# Ubuntu

./: Pioneer.webm  aeb_control.cpp
2024/20240103/gugudan.c/: 99dan_test.c  Makefile  test12
20240104/homework/: Makefile  homework1.c  hw1
20240104/homework2/: Makefile  homework2.c  hw2
20240104/test_1/: Makefile  test2  test2_1.c  test2_3.c  test3  test4
20240105/: Makefile
20240105/sum1/: Makefile  thread
20240105/sum2/: Makefile  thread2
20240108/my_second_pkg/: CMakeLists.txt
20240109/: 1.txt
20240109/gugudan/: CMakeLists.txt
20240109/gugudan/src/: gugudan_pu.cpp  gugudan_sub.cpp
20240109/turtle_pose/src/: turtle_pose_node.cpp
20240110/my_second_pkg/src/: operator_node.cpp
20240112/: operator_node.cpp
20240112/turtle_pose/src/: turtle_pose_node.cpp
2024_onefifth_catkin_ws/src/basic_shapes/: CMakeLists.txt  package.xml
2024_onefifth_catkin_ws/src/basic_shapes/src/: basic_shapes_node.cpp
2024_onefifth_catkin_ws/src/gps_lla_to_utm/: CMakeLists.txt  package.xml
2024_onefifth_catkin_ws/src/gps_lla_to_utm/launch/: gps_lla_to_utm.launch
2024_onefifth_catkin_ws/src/gps_lla_to_utm/src/: file_lla_to_utm.cpp  gps_lla_to_utm_node.cpp
Pioneer/: CMakeLists.txt  package.xml
Pioneer/src/: Pioneer_node.cpp
aeb_control/: CMakeLists.txt
aeb_control/src/: aeb_control_node.cpp  aeb_control_ps.cpp
car_control/: CMakeLists.txt  package.xml
car_control/I2C/: I2C.ino
car_control/launch/: car_control.launch
car_control/src/: car_control_node.cpp
car_control/teleop/: teleop.py
cmd_vel_mux/src/: cmd_vel_mux_node.cpp
imu_correction/: CMakeLists.txt
imu_correction/src/: imu_correction_node.cpp
line_control/: CMakeLists.txt  package.xml
line_control/src/: line_control.cpp
move_waypoint/src/: move_waypoint_node.cpp
opencv_line_detection/src/: opencv_line_detect_image_topic.cpp
sim_catkin_ws/car_control/: CMakeLists.txt
sim_catkin_ws/car_control/launch/: car_control.launch
sim_catkin_ws/car_control/src/: car_control_node.cpp
sim_catkin_ws/imu_correction/launch/: imu_correction.launch
sim_catkin_ws/line_camera_sim/: CMakeLists.txt
sim_catkin_ws/line_control/launch/: line_control.launch
sim_catkin_ws/move_waypoint/: CMakeLists.txt
sim_catkin_ws/move_waypoint/launch/: move_waypoint.launch
sim_catkin_ws/nav_gui/scripts/: nav_gui.py
sim_catkin_ws/pioneer/: package.xml
sim_catkin_ws/pioneer/src/: Pioneer_node.cpp
sim_catkin_ws/pioneer_control/: CMakeLists.txt  package.xml
sim_catkin_ws/recursive_average_filta/: CMakeLists.txt  package.xml
sim_catkin_ws/recursive_average_filta/launch/: recursive_average_filta.launch
sim_catkin_ws/recursive_average_filta/src/: recursive_average_filta_node.cpp
sim_catkin_ws/wall_following/launch/: wall_folloing.launch
sim_catkin_ws/waypoint_control_system/: CMakeLists.txt  package.xml
sim_catkin_ws/waypoint_control_system/data/: waypoint1.txt
sim_catkin_ws/waypoint_control_system/launch/: wcs.launch
sim_catkin_ws/waypoint_control_system/src/: waypoint_control_system_node.cpp
sim_catkin_ws/yaw_control/: CMakeLists.txt
wall_following/src/: wall_following_node.cpp
waypoint_move, flag, waypoint_control 제어/: Topic_List_LEE.xlsx
yaw_control/src/: yaw_control_node.cpp
(+2 files in other folders)
